--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -3,3 +3,24 @@ on:
   push:
     branches:
       - master
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Grant execute permission for Gradle Wrapper
+      run: chmod +x gradlew
+    - name: Build Project with Gradle
+      run: ./gradlew build
+    - name: Build and Push Docker Image to Docker Hub
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: yourdockerhubusername/yourimage:latest
+        registry: docker.io
+        username: ${{ secrets.rcalimlim113 }}
+        password: ${{ secrets.RyanUCLA1019!doc }}
