--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build and Push Docker Image to Docker Hub
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        image: yourdockerhubusername/yourimage:latest
+        image: rcalimlim113/yourimage:latest
         registry: docker.io
         username: ${{ secrets.rcalimlim113 }}
         password: ${{ secrets.RyanUCLA1019doc }}
