--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -7,20 +7,24 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for Gradle Wrapper
-      run: chmod +x gradlew
-    - name: Build Project with Gradle
-      run: ./gradlew build
-    - name: Build and Push Docker Image to Docker Hub
-      uses: mr-smithers-excellent/docker-build-push@v4
-      with:
-        image: rcalimlim113/yourimage
-        registry: docker.io
-        username: ${{ secrets.rcalimlim113 }}
-        password: ${{ secrets.RyanUCLA1019doc }}
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Grant execute permission for Gradle Wrapper
+        run: chmod +x gradlew
+
+      - name: Build Project with Gradle
+        run: ./gradlew build
+
+      - name: Build and Push Docker Image to Docker Hub
+        uses: mr-smithers-excellent/docker-build-push@v4
+        with:
+          image: rcalimlim113/java
+          registry: docker.io
+          username: ${{ secrets.rcalimlim113 }}
+          password: ${{ secrets.RyanUCLA1019doc }}
