--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           image: rcalimlim113/java
           registry: docker.io
-          username: ${{ secrets.rcalimlim113 }}
-          password: ${{ secrets.RyanUCLA1019doc }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
