--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,6 @@ jobs:
       with:
         image: rcalimlim113/demo-app
         registry: docker.io
-        username: ${{ secrets.rcalimlim113 }}
-        password: ${{ secrets.RyanUCLA1019doc }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
          
